RESOLVED FIXED64808
REGRESSION (r91136-r91146): 40 tests failing on Windows 7 Release (Tests)
https://bugs.webkit.org/show_bug.cgi?id=64808
Summary REGRESSION (r91136-r91146): 40 tests failing on Windows 7 Release (Tests)
Adam Roben (:aroben)
Reported 2011-07-19 09:48:13 PDT
The following tests started failing on Windows 7 Release (Tests) between r91137 and r91146 (inclusive): animations/animation-end-event-destroy-renderer.html animations/animation-hit-test-transform.html animations/animation-start-event-destroy-renderer.html animations/big-rotation.html animations/combo-transform-rotate+scale.html animations/dynamic-stylesheet-loading.html animations/fill-mode-transform.html animations/keyframe-timing-functions-transform.html animations/matrix-anim.html animations/missing-from-to-transforms.html animations/missing-keyframe-properties-timing-function.html animations/missing-keyframe-properties.html animations/missing-values-first-keyframe.html animations/missing-values-last-keyframe.html animations/negative-delay.html animations/opacity-transform-animation.html animations/simultaneous-start-transform.html animations/suspend-transform-animation.html animations/transition-and-animation-1.html animations/transition-and-animation-2.html animations/3d/change-transform-in-end-event.html animations/3d/matrix-transform-type-animation.html animations/3d/replace-filling-transform.html animations/3d/state-at-end-event-transform.html animations/3d/transform-perspective.html compositing/animation/animation-compositing.html compositing/animation/state-at-end-event-transform-layer.html compositing/geometry/limit-layer-bounds-opacity-transition.html compositing/geometry/limit-layer-bounds-transformed-overflow.html compositing/tiling/crash-reparent-tiled-layer.html fast/css/getComputedStyle/getComputedStyle-with-pseudo-element.html plugins/invalidate_rect.html transitions/extra-transition.html transitions/interrupt-transform-transition.html transitions/move-after-transition.html transitions/start-transform-transition.html transitions/transition-end-event-destroy-renderer.html transitions/transition-end-event-rendering.html transitions/transition-end-event-transform.html transitions/3d/interrupted-transition.html http://trac.webkit.org/log/trunk?rev=91146&stop_rev=91137 http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r91136%20(14828)/results.html passed http://build.webkit.org/results/Windows%207%20Release%20(Tests)/r91146%20(14830)/results.html failed
Attachments
Patch (1.87 KB, patch)
2011-07-19 17:44 PDT, Simon Fraser (smfr)
aroben: review+
Simon Fraser (smfr)
Comment 1 2011-07-19 17:44:21 PDT
Simon Fraser (smfr)
Comment 2 2011-07-19 17:47:13 PDT
Note You need to log in before you can comment on or make changes to this bug.