third_party/WebKit/Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp
@@ -251,7 +251,7 @@ GraphicsLayerCA::GraphicsLayerCA(GraphicsLayerClient* client)
     , m_contentsLayerPurpose(NoContentsLayer)
     , m_contentsLayerHasBackgroundColor(false)
     , m_allowTiledLayer(true)
-    , m_uncommittedChanges(ContentsScaleChanged)
+    , m_uncommittedChanges(0)
 {
     m_layer = PlatformCALayer::create(PlatformCALayer::LayerTypeWebLayer, this);
 
@@ -260,6 +260,7 @@ GraphicsLayerCA::GraphicsLayerCA(GraphicsLayerClient* client)
 #endif
 
     updateDebugIndicators();
+    noteLayerPropertyChanged(ContentsScaleChanged);
 }
 
 GraphicsLayerCA::~GraphicsLayerCA()
